--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "name": "pm-manifest",
     "globalObject": "pm-manifest",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "PM manifest definition files",
     "type": "module",
-    "main": "./dist/index.js",
+    "main": "./src/index.ts",
+    "files": [
+        "./src/**/*"
+    ],
     "license": "MIT",
     "scripts": {
         "dev": "tsc -w",
