--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "build": "rollup -c rollup.config.js --environment targer:es2020"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^25.0.2",
-        "@rollup/plugin-node-resolve": "^15.1.0",
+        "@rollup/plugin-commonjs": "25.0.4",
+        "@rollup/plugin-node-resolve": "15.2.1",
         "@rollup/plugin-terser": "^0.4.3",
-        "@rollup/plugin-typescript": "^11.1.2",
+        "@rollup/plugin-typescript": "11.1.3",
         "esbuild": "^0.18.11",
-        "rollup": "^3.26.0",
+        "rollup": "3.28.1",
         "tslib": "^2.6.0",
         "typescript": "^5.1.6"
     },
