--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
         "@rollup/plugin-node-resolve": "15.2.1",
         "@rollup/plugin-terser": "^0.4.3",
         "@rollup/plugin-typescript": "11.1.3",
-        "esbuild": "^0.18.11",
+        "esbuild": "0.19.2",
         "rollup": "3.28.1",
-        "tslib": "^2.6.0",
-        "typescript": "^5.1.6"
+        "tslib": "2.6.2",
+        "typescript": "5.2.2"
     },
     "dependencies": {
-        "fast-xml-parser": "^4.2.5"
+        "fast-xml-parser": "4.2.7"
     }
 }
