--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pm-manifest",
     "globalObject": "pm-manifest",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "PM manifest definition files",
     "license": "MIT",
     "repository": {
@@ -30,6 +30,7 @@
     "scripts": {
         "dev": "tsc -w",
         "build:min": "rollup -c rollup.config.js --environment targer:es2020,minify",
-        "build": "rollup -c rollup.config.js --environment targer:es2020"
+        "build": "rollup -c rollup.config.js --environment targer:es2020",
+        "publish": "pnpm run build && pnpm publish"
     }
 }
