--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "files": [
         "./src"
     ],
+    "pnpm": {
+        "onlyBuiltDependencies": ["esbuild"]
+    },
     "devDependencies": {
         "@rollup/plugin-commonjs": "28.0.1",
         "@rollup/plugin-node-resolve": "15.3.0",
