--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "esbuild": "0.25.10",
         "rollup": "4.28.1",
         "tslib": "2.8.1",
-        "typescript": "5.9.2"
+        "typescript": "5.9.2",
+        "vitest": "^4.0.18"
     },
     "dependencies": {
         "@types/uuid": "^10.0.0",
@@ -37,6 +38,8 @@
     "scripts": {
         "tsc": "tsc -w",
         "dev": "tsc -w",
+        "test": "vitest run",
+        "test:watch": "vitest",
         "build:min": "rollup -c rollup.config.js --environment targer:es2020,minify",
         "build": "rollup -c rollup.config.js --environment targer:es2020",
         "prepublish": "pnpm run build",
