--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@rollup/plugin-node-resolve": "15.3.0",
         "@rollup/plugin-terser": "^0.4.3",
         "@rollup/plugin-typescript": "12.1.1",
+        "@types/node": "^25.2.2",
         "esbuild": "0.25.10",
         "rollup": "4.28.1",
         "tslib": "2.8.1",
@@ -39,6 +40,7 @@
         "tsc": "tsc -w",
         "dev": "tsc -w",
         "test": "vitest run",
+        "tsc:test": "tsc -p tsconfig.test.json --noEmit",
         "test:watch": "vitest",
         "build:min": "rollup -c rollup.config.js --environment targer:es2020,minify",
         "build": "rollup -c rollup.config.js --environment targer:es2020",
